--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
         /* Estilo para el recuadro de bienvenida */
         #bienvenidos {
-            background-color: #f0f0f0;
+            background-color: #8f8a6c;
             padding: 20px;
             text-align: center;
         }
@@ -26,7 +26,7 @@
     </nav>
 
     <!-- Recuadro de bienvenida -->
-    <div id="bienvenidos">
+    <div id="Giovani chupalo">
         <h2>Bienvenidos</h2>
         <p>Gracias por visitar nuestra página web.</p>
     </div>
