--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Mi Primera Página Web</title>
+    <title>Giovani chupalo</title>
     <style>
         /* Estilo para el recuadro de bienvenida */
         #bienvenidos {
