--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Giovani chupalo</title>
+    <title>Mi Primera Página Web</title>
     <style>
+        /* Estilo para el fondo morado de la página */
+        body {
+            background-color: purple;
+            margin: 0; /* Elimina el margen predeterminado del body */
+            padding: 0; /* Elimina el espacio de relleno predeterminado del body */
+        }
+
         /* Estilo para el recuadro de bienvenida */
         #bienvenidos {
             background-color: #8f8a6c;
@@ -26,9 +33,9 @@
     </nav>
 
     <!-- Recuadro de bienvenida -->
-    <div id="Giovani chupalo">
+    <div id="test pagina">
         <h2>Bienvenidos</h2>
-        <p>Gracias por visitar nuestra página web.</p>
+        <p>yeah perdonen.</p>
     </div>
 
     <main>
@@ -48,3 +55,4 @@
     </footer>
 </body>
 </html>
+
